# wavegpt

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: experiments.md  pipeline.md  prior-art.md  spectral-personalities.md  the-discovery.md  theory-eli5.md  theory.md
experiments/: README.md
finance/: FIBONACCI_RETRACEMENT.md  PRODUCT.md  README.md  THE_EQUATION.md  acquire_data.py  alpha_decision_model.py  alpha_playbook.py  blind-backtest-results.json  blind_backtest.py  build_features.py  config.py  fill_monitor.py  find_all_signals.py  find_leaders.py  live_alpha.py  live_trader.py  market-deep-spectral.json  market-spectral.json  market_deep_analysis.py  market_open_runner.py  market_spectral_analysis.py  multi_runner.py  multi_signal_model.py  optimize_strategy.py  realtime_alpha_monitor.py  regime_rotation.py  sentinel.py  simulate_3yr.py  speculator.py  strategy-optimization.json  stream_trader.py  sweep_multi_signal.py  sweep_parameters.py  sweep_v2.py  tech7_analysis.py  tech7_flow_trader.py  tech7_flows.py  train_hybrid_trader.py  train_spectral_trader.py  unified_trader.py
probes/: ray_kurzweil.json  ray_voice.json
prompts/: golden-ratio-harmonics.md
runs/: 2026-04-11-experiment-status.md  2026-04-14-successful-personality-runs.md  celegans-deep-svd.json  celegans-functional-spectral.json  celegans-spectral-phi-analysis.json  celegans-spectral.json  gemma4-free-alpha-energy.json  gemma4-free-alpha.json  rai-baseline.json  rai-baseline.md
scripts/: _analyze_sft.py  _analyze_sft_deep.py  alpha_energy_theory.py  analyze_attn_v.py  (+48 more)
(+157 files in other folders)
